--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Lincoln, Abraham, 1809-1865'
 - !lcc 'E456'
+- GITenberg
 title: Abraham Lincoln geschetst in zijn leven en daden
 url: http://www.gutenberg.org/ebooks/45767
